Increase delay when typing, remove margin on Safari, fix dialog location

--- a/web/scripts/ui/menu/menu.css
+++ b/web/scripts/ui/menu/menu.css
@@ -18,6 +18,7 @@
 	border-radius: 4px;
 	padding: 4px 8px;
 	box-sizing: border-box;
+	margin: 0;
 }
 
 .comfyui-button:disabled {
